fix: pre release